added maps and spot/:id

--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "start": "http-server",
+    "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "preinstall": "npm install -g http-server",
-    "postinstall": "ng build && mv dist/* ."
+    "e2e": "protractor"
   },
   "private": true,
   "dependencies": {
@@ -22,14 +20,12 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
-    "core-js": "^2.4.0",
-    "bootstrap": "^3.3.6",
-    "rxjs": "5.0.0-beta.11",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "0.6.12",
     "@types/jasmine": "^2.2.30",
     "angular-cli": "1.0.0-beta.11-webpack.8",
+    "angular2-google-maps": "^0.14.0",
+    "bootstrap": "^3.3.6",
     "codelyzer": "~0.0.26",
+    "core-js": "^2.4.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "0.13.22",
@@ -37,9 +33,12 @@
     "karma-jasmine": "0.3.8",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.3",
+    "rxjs": "5.0.0-beta.11",
+    "ts-helpers": "^1.1.1",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.0.0"
+    "typescript": "^2.0.0",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
   }
