--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "karma-chrome-launcher": "0.2.3",
     "karma-jasmine": "0.3.8",
     "karma-remap-istanbul": "^0.2.1",
+    "ng2-translate": "^3.0.0",
     "protractor": "4.0.3",
     "rxjs": "5.0.0-beta.11",
     "ts-helpers": "^1.1.1",
@@ -40,6 +41,5 @@
     "typescript": "^2.0.0",
     "zone.js": "0.6.12"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
