--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jasmine": "^2.2.30",
     "angular-cli": "1.0.0-beta.11-webpack.8",
     "angular2-google-maps": "^0.14.0",
+    "angular2-moment": "^1.4.0",
     "bootstrap": "^3.3.6",
     "codelyzer": "~0.0.26",
     "core-js": "^2.4.0",
